Add error-prone, JSpecify, and NullAway (#86)
* build: bump version
* build: add JSpecify, error-prone, and NullAway
* refactor: use JSpecify in the generator
* refactor: use JSpecify in the inspections
* refactor: fix error-prone warnings and switch to JSpecify